--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -2335,7 +2335,7 @@ input.error, .errorCity {
 							font-size: 11px;
 						}
 						.location-addressL2 {
-							    
+							   
 							    float: left;
 							    width: 100%;
 							.location-city {
@@ -2595,7 +2595,7 @@ input.error, .errorCity {
 												border: 1px solid @color21;
 												height:29px;
 												font-size:12px;
-												margin-right:0;
+												margin-right:1.6%;
 												&:focus {
 													border-color: #aaa;
 												}
@@ -4192,7 +4192,7 @@ input.error, .errorCity {
 					color:@color1;
 					margin:5px 0;
 					span{
-						.helvetica-medium !important;
+						.helvetica-medium;
 						margin-left: 7px;
 						display: inline-block;
 						text-transform:lowercase;
